--- a/wrapper/pages/html/list.html
+++ b/wrapper/pages/html/list.html
@@ -34,6 +34,7 @@
 				<a href="/cc?themeId=cc2&bs=default">Lil Peepz</a>
 				<a href="/cc?themeId=chibi&bs=default">Chibi Peepz</a>
 				<a href="/cc?themeId=ninja&bs=default">Chibi Ninjas</a>
+				<hr>
 			</nav>
 		</div>
 		<div class="dropdown_contain button_small">
@@ -72,8 +73,7 @@
 
 <footer>
 	<nav id="foot-left">
-		<a href="https://localhost:4664/faq.html">FAQ</a>
-		<a href="https://discord.gg/yhGAetN">Wrapper Hub</a>
+		<a href="https://discord.gg/goanimate">Go!Animate City</a>
 	</nav>
 
 	<nav id="foot-right">
