--- a/wrapper/pages/html/credits.html
+++ b/wrapper/pages/html/credits.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="../../favicon.ico" type="image/png">
-	<title>Welcome to Re!Animate</title>
+	<title>Credits for Re!Animate</title>
 	<meta name="description" content="Wrapper: Offline's Video List">
 	<link rel="stylesheet" type="text/css" href="../css/modern-normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/global.css">
@@ -13,12 +13,9 @@
 
 <header>
 	<h1 style="margin:0"><img id="logo" src="../img/list_logo.png" alt="Wrapper: Offline"/></h1>
-		<a href="http://localhost:4343/pages/html/list.html" class="button_big">VIDEO LIST</a>
-	</nav>
 </header>
 
-<center><h1>Welcome to Re!Animate</h1></center>
-<center>The Best Go!Animate Revival Website ever made</center>
-<center>Feel free to look around, watch some videos that others created just for YOU, or make your own videos.</center>
-<center>Demo coming soon...</center>
-<center><a href="http://localhost:4343/pages/html/credits.html">Credits</a></center>
+<center><h1>Thanks to all of these guys for making this Possible!</h1></center>
+<center>Mr S (me) - Owner of Re!Animate</center>
+<center>Vyond - Owners of Comedy World, Lil Peepz, Chibi Peepz, Anime, Space Citizens, White Houserz, Cartoon Classics, Politics and Celebrity, Holiday & Seasonal, Monster Mayhem, Stick Figures, Full Energy and Domo themes</center>
+<center>Click <a href="http://localhost:4343/pages/html/main.html">here</a> to go back to the mainpage</center>
