--- a/wrapper/pages/html/list.html
+++ b/wrapper/pages/html/list.html
@@ -14,7 +14,7 @@
 <header>
 	<h1 style="margin:0"><img id="logo" src="../img/list_logo.png" alt="Wrapper: Offline"/></h1>
 	<nav id="headbuttons">
-		<a class="button_small" onclick="document.getElementById('file').click()">UPLOAD A MOVIE</a>
+		<a href="http://localhost:4343/pages/html/main.html" class="button_small">BACK TO MAINPAGE</a>
 		<div class="dropdown_contain button_small">
 			<div class="dropdown_button">CREATE A CHARACTER</div>
 			<nav class="dropdown_menu">
@@ -75,13 +75,6 @@
 	<nav id="foot-left">
 		<a href="https://discord.gg/goanimate">Go!Animate City</a>
 	</nav>
-
-	<nav id="foot-right">
-		<a href="https://localhost:4664">Server Page</a>
-		<a href="https://localhost:4664/caillou.html">Caillou</a>
-	</nav>
-</footer>
-
 
 <form enctype='multipart/form-data' action='/upload_movie' method='post'>
 	<input id='file' type="file" onchange="this.form.submit()" name='import' />
