--- a/wrapper/pages/html/list.html
+++ b/wrapper/pages/html/list.html
@@ -15,6 +15,7 @@
 	<h1 style="margin:0"><img id="logo" src="../img/list_logo.png" alt="Wrapper: Offline"/></h1>
 	<nav id="headbuttons">
 		<a href="http://localhost:4343/pages/html/main.html" class="button_small">BACK TO MAINPAGE</a>
+		<a class="button_small" onclick="document.getElementById('file').click()">UPLOAD A MOVIE</a>
 		<div class="dropdown_contain button_small">
 			<div class="dropdown_button">CREATE A CHARACTER</div>
 			<nav class="dropdown_menu">
