--- a/wrapper/pages/html/main.html
+++ b/wrapper/pages/html/main.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" href="../../favicon.ico" type="image/png">
 	<title>Welcome to Re!Animate</title>
-	<meta name="description" content="Wrapper: Offline's Video List">
+	<meta name="description" content="Re!Animate">
 	<link rel="stylesheet" type="text/css" href="../css/modern-normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/global.css">
 	<link rel="stylesheet" type="text/css" href="../css/list.css">
